@@ -93,13 +93,15 @@ enable_spy: no
 console: off
 
 // Database autosave time
-// When positive, all characters are saved on this time in seconds (example:
+// All characters are saved on this time in seconds (example:
 // autosave of 60 secs with 60 characters online -> one char is saved every 
 // second)
-// When negative, the timeslot is constant, in seconds (example: if -1, a
-// character will be saved once a second, regardless of number of players 
-// online).
 autosave_time: 300
+
+// Min database save intervals (in ms)
+// Prevent saving characters faster than at this rate (prevents char-server 
+// save-load getting too high as character-count increases)
+minsave_time: 100
 
 // Apart from the autosave_time, players will also get saved when involved
 // in the following (add as needed):
